# discordbot

./: CMakeLists.txt  discordbot.cpp  discordbot.h
